--- a/hayashi_temma/src/main/resources/templates/post.html
+++ b/hayashi_temma/src/main/resources/templates/post.html
@@ -15,7 +15,7 @@
         <li th:each="err : ${errorMessages}" th:text="${err}"></li>
     </div>
 
-    //th:objectでFORMを指定し、th:fieldで属性を指定する。
+    <!--th:objectでFORMを指定し、th:fieldで属性を指定する。-->
     <form th:action="@{/post}" method="post" th:object="${postForm}">
         <label>件名</label>
         <input type="text" th:field="*{title}"><br/>
@@ -28,6 +28,7 @@
 
         <button type="submit">投稿</button>
     </form>
+    <a th:href="@{/home}">戻る</a>
 </div>
 </body>
 </html>
