ユーザー登録機能まで実装

--- a/hayashi_temma/src/main/resources/templates/userRegister.html
+++ b/hayashi_temma/src/main/resources/templates/userRegister.html
@@ -45,7 +45,7 @@
         <option value="">--部署を選択--</option>
         <option value="1">営業部</option>
         <option value="2">技術部</option>
-        <option value="3">総務人事部</option>
+        <option value="3">総務人事部(本社のみ)</option>
     </select><br/>
 
 
