--- a/hayashi_temma/src/main/resources/templates/userList.html
+++ b/hayashi_temma/src/main/resources/templates/userList.html
@@ -10,6 +10,7 @@
     <li><a th:href="@{/home}">ホームへ戻る</a></li>
     <li><a th:href="@{/user/register}">ユーザ登録</a></li>
 </ul>
+
 <table>
     <thead>
         <tr>
@@ -40,8 +41,8 @@
                 </a>
                 <!--停止と復活の切り替えボタン-->
                 <form th:action="@{/user/update/{id}(id=${user.id})}" method="post"
-                      onsubmit="return confirm('本当に変更していいですか？');">
-                    <button type="submit" th:text="${user.isStopped == 1 ? '復活' : '停止'}"></button>
+                      onsubmit="return confirm('本当に変更していいですか？');" >
+                    <button type="submit" th:disabled="${user.id == loginUser.id}" th:text="${user.isStopped == 1 ? '復活' : '停止'}"></button>
                 </form>
             </td>
         </tr>
