10/24　16時プッシュ

--- a/hayashi_temma/src/main/resources/templates/userRegister.html
+++ b/hayashi_temma/src/main/resources/templates/userRegister.html
@@ -5,7 +5,7 @@
     <title>ユーザー登録</title>
 </head>
 <body>
-<h2>ユーザー登録画面</h2>
+<h2>ユーザー新規登録画面</h2>
 <!--メニュー-->
 <ul>
     <li><a th:href="@{/home}">ホーム画面に戻る</a></li>
@@ -37,15 +37,17 @@
     <select th:field="*{branchId}">
         <option value="">--支社を選択--</option>
         <option value="1">本社</option>
-        <option value="2">大阪支社</option>
-        <option value="3">福岡支社</option>
+        <option value="2">支社A</option>
+        <option value="3">支社B</option>
+        <option value="4">支社C</option>
     </select><br/>
 
     <select th:field="*{departmentId}">
         <option value="">--部署を選択--</option>
-        <option value="1">営業部</option>
-        <option value="2">技術部</option>
-        <option value="3">総務人事部(本社のみ)</option>
+        <option value="1">総務人事部(本社のみ)</option>
+        <option value="2">情報管理部(本社のみ)</option>
+        <option value="3">営業部</option>
+        <option value="4">技術部</option>
     </select><br/>
 
 
