--- a/hayashi_temma/src/main/resources/templates/userList.html
+++ b/hayashi_temma/src/main/resources/templates/userList.html
@@ -8,7 +8,7 @@
 <h2>ユーザ管理画面</h2>
 <ul>
     <li><a th:href="@{/home}">ホームへ戻る</a></li>
-    <li><a th:href="@{/user/register}">ユーザ登録</a></li>
+    <li><a th:href="@{/user/register}">ユーザ新規登録</a></li>
 </ul>
 
 <table>
@@ -17,6 +17,7 @@
             <th>ID</th>
             <th>アカウント</th>
             <th>氏名</th>
+            <th>パスワード</th>
             <th>支店ID</th>
             <th>支店名</th>
             <th>部署ID</th>
@@ -29,6 +30,7 @@
             <td th:text="${user.id}"></td>
             <td th:text="${user.account}"></td>
             <td th:text="${user.name}"></td>
+            <td th:text="${user.password}"></td>
             <td th:text="${user.branchId}"></td>
             <td th:text="${user.branch.name}"></td>
             <td th:text="${user.departmentId}"></td>
